--- a/common/html/options.html
+++ b/common/html/options.html
@@ -13,10 +13,10 @@
   <form id="habitrpgForm">
 
     <div class="section box neutral">
-      <div id="EmptyUID" class="state">If the UserId or API token is field empty, this extension does not work</div>
-      <label for="uid">HabitRPG UserId:</label><input id="uid" class="box" type="text"/></br>
+      <div id="EmptyUID" class="state">If either field is empty, this extension does not work.</div>
+      <label for="uid">HabitRPG User ID:</label><input id="uid" class="box" type="text"/></br>
       <label for="apiToken">HabitRPG API Token:</label><input id="apiToken" class="box" type="text"/></br>
-      <p><label for="isCloudStorage">Save settings to the cloud </label><input id="isCloudStorage" class="box" type="checkbox" /></p>
+      <p><label for="isCloudStorage">Save settings to the cloud </label><input id="isCloudStorage" class="box" type="checkbox"/></p>
       <button class="btn" type="submit">Save</button>
       <div class="state" id="status">Options Saved.</div>
     </div>
@@ -24,18 +24,18 @@
     <div class="section box">
       <h2>Host watcher <label for="siteWatcherIsActive">Enabled</label><input id="siteWatcherIsActive" class="box" type="checkbox" /></h2>
       <p>
-        <label for="sendInterval">Send to HabitRPG interval:</label><input class="box" type="number" id="sendInterval" value="25" min="5" /> minute <br />
+        <label for="sendInterval">Send to HabitRPG interval:</label><input class="box" type="number" id="sendInterval" value="25" min="5" /> minute(s)<br/>
       </p>
       <label for="activatorName">How would you like to control the sitewatcher:</label>
       <select id="activatorName" class="box">
         <option value="alwayson">Always on</option>
         <option value="webpage">Via website</option>
         <option value="tomatoes">Via http://tomato.es</option>
-        <option value="days">Days and hours</option>
+        <option value="days">Scheduled times</option>
       </select><br />
       <div id="ActivatorOptions">
         <div id="ActOpts-webpage">
-          <label for="watchedUrl">Url:</label><input class="box" type="text" id="watchedUrl" /> <br />( Started with 'http://' or 'https://' or leave completle blank)
+          <label for="watchedUrl">URL:</label><input class="box" type="text" id="watchedUrl" /> <br />(Start with 'http://' or 'https://' or leave completely blank)
         </div>
         <div id="ActOpts-days">
         </div>
@@ -52,20 +52,20 @@ lifehacker.com
 codecademy.com
 khanacademy.org</textarea></div>
       </div>
-      If you type an empty row into one section, then the extension will detect when the chrome lost or has focus<br/>
-      eg: add the empty line to the top of the productive websites. save your settings. and switch to your working program. Voala the extension keep thinking you are working:)
-      <p><label for="isVerboseSiteWatcher">Would you like receive notification when enter or live a detection area? </label><input class="box" type="checkbox" id="isVerboseSiteWatcher" /></p>
+If you type an empty row into one section, then time when Chrome has lost focus will be counted as productive or non-productive.<br/>
+For example, if you add the empty line to the top of the productive websites list, save your settings, and switch to your work app (e.g. Excel), the extension will count time spent away from Chrome as working time. :)
+      <p><label for="isVerboseSiteWatcher">Would you like to be notified when you enter or leave a detection area? </label><input class="box" type="checkbox" id="isVerboseSiteWatcher" /></p>
     </div>
 
     <div class="section box">
-      <h2><a href="http://tomato.es" target="_blank">Tomatoes</a> linkage <label for="tomatoesIsActive">Enabled</label><input id="tomatoesIsActive" class="box" type="checkbox" /></h2>
-      <label for="tomatoesOverTimePenalty">Punishment when you don't keep the pomodore intervals? </label><input id="tomatoesOverTimePenalty" class="box" type="checkbox" />        
+      <h2><a href="http://tomato.es" target="_blank">Tomato.es</a> integration <label for="tomatoesIsActive">Enabled</label><input id="tomatoesIsActive" class="box" type="checkbox" /></h2>
+      <label for="tomatoesOverTimePenalty">Punishment when you don't keep the Pomodoro intervals? </label><input id="tomatoesOverTimePenalty" class="box" type="checkbox" />        
     </div>
 
     <div class="section box">
-      <h2>Todo apps linkage <label for="todosIsActive">Enabled</label><input id="todosIsActive" class="box" type="checkbox" /></h2>
+      <h2>To-do app integration <label for="todosIsActive">Enabled</label><input id="todosIsActive" class="box" type="checkbox" /></h2>
       <ul class="inlineList">
-        <li>Supported Todo sites: </li>
+        <li>Supported to-do sites: </li>
         <li><a href="http://asana.com" target="_blank">Asana</a></li>
         <li><a href="https://workflowy.com/" target="_blank">Workflowy</a></li>
         <li><a href="https://mail.google.com/mail/tasks/" target="_blank">Google Tasks</a></li>
